--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             border-radius: 5px;
             text-align: center;
         }
+<div class="product">
+    <img src="https://via.placeholder.com/250" alt="Product Image">
+    <h3>Product 1</h3>
+    <p>Best-selling gadget of 2025!</p>
+    <a href="https://amzn.to/42mHFDE" target="_blank">Buy on Amazon</a>
+</div>
         .product a:hover {
             background: #e68a00;
         }
