--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Deals & Reviews</title>
+    <title>Amazon Affiliate Deals</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,30 +19,18 @@
         }
         .container {
             padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
         }
         .product {
             background: white;
             padding: 15px;
-            margin: 10px;
-            width: 250px;
+            margin: 10px auto;
+            width: 300px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
         }
         .product img {
             width: 100%;
             border-radius: 5px;
-        }
-        .product h3 {
-            margin: 10px 0 5px;
-            font-size: 18px;
-        }
-        .product p {
-            font-size: 14px;
-            color: #555;
         }
         .product a {
             display: block;
@@ -53,16 +40,7 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            text-align: center;
-        }
-<div class="product">
-    <img src="https://via.placeholder.com/250" alt="Product Image">
-    <h3>Product 1</h3>
-    <p>Best-selling gadget of 2025!</p>
-    <a href="https://amzn.to/42mHFDE" target="_blank">Buy on Amazon</a>
-</div>
-        .product a:hover {
-            background: #e68a00;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -70,16 +48,10 @@
     <header>Amazon Affiliate Deals</header>
     <div class="container">
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Best-selling gadget of 2025!</p>
-            <a href="#" target="_blank">Buy on Amazon</a>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>Exclusive discount available.</p>
-            <a href="#" target="_blank">Buy on Amazon</a>
+            <img src="https://via.placeholder.com/300" alt="Amazon Deal">
+            <h3>Exclusive Amazon Deal</h3>
+            <p>Don't miss this amazing offer on Amazon!</p>
+            <a href="https://amzn.to/42mHFDE" target="_blank">Buy on Amazon</a>
         </div>
     </div>
 </body>
