--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         .container {
             padding: 20px;
         }
+        .category {
+            margin: 20px 0;
+            font-size: 20px;
+            font-weight: bold;
+        }
         .product {
             background: white;
             padding: 15px;
@@ -52,6 +57,28 @@
             <h3>Exclusive Amazon Deal</h3>
             <p>Don't miss this amazing offer on Amazon!</p>
             <a href="https://amzn.to/42mHFDE" target="_blank">Buy on Amazon</a>
+        </div>
+        
+        <div class="category">Low Price on AC</div>
+        <div class="product">
+            <img src="https://via.placeholder.com/300" alt="AC No.1">
+            <h3>AC No.1</h3>
+            <a href="https://www.amazon.in/gp/product/B0DSXQZ4L5/ref=ox_sc_act_title_2?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/300" alt="AC No.2">
+            <h3>AC No.2</h3>
+            <a href="https://www.amazon.in/gp/product/B0DSWRQRNZ/ref=ox_sc_act_title_8?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/300" alt="AC No.3">
+            <h3>AC No.3</h3>
+            <a href="https://www.amazon.in/gp/product/B0CSK23FH5/ref=ox_sc_act_title_9?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/300" alt="AC No.4">
+            <h3>AC No.4</h3>
+            <a href="https://www.amazon.in/gp/product/B0DSVSMK39/ref=ox_sc_act_title_6?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
         </div>
     </div>
 </body>
