--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Affiliate Deals</title>
+    <title>Bee Hive - Amazon Affiliate Deals</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +16,18 @@
             padding: 15px;
             font-size: 24px;
             color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .logo {
+            height: 50px;
+            margin-right: 15px;
+        }
+        .funky-text {
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
         }
         .container {
             padding: 20px;
@@ -50,7 +62,10 @@
     </style>
 </head>
 <body>
-    <header>Amazon Affiliate Deals</header>
+    <header>
+        <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/Logo.png" alt="Bee Hive Logo" class="logo">
+        <span class="funky-text">Bee Hive</span>
+    </header>
     <div class="container">
         <div class="product">
             <img src="https://via.placeholder.com/300" alt="Amazon Deal">
@@ -61,23 +76,27 @@
         
         <div class="category">Low Price on AC</div>
         <div class="product">
-            <img src="https://via.placeholder.com/300" alt="AC No.1">
-            <h3>AC No.1</h3>
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="Carrier 1 Ton 5 Star">
+            <h3>Carrier 1 Ton 5 Star</h3>
+            <p>✅ Energy efficient<br>❌ Slightly expensive</p>
             <a href="https://www.amazon.in/gp/product/B0DSXQZ4L5/ref=ox_sc_act_title_2?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/300" alt="AC No.2">
-            <h3>AC No.2</h3>
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/2.jpg" alt="Panasonic 1 Ton 3 Star">
+            <h3>Panasonic 1 Ton 3 Star</h3>
+            <p>✅ Good cooling<br>❌ Moderate power consumption</p>
             <a href="https://www.amazon.in/gp/product/B0DSWRQRNZ/ref=ox_sc_act_title_8?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/300" alt="AC No.3">
-            <h3>AC No.3</h3>
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/3.jpg" alt="Haier 1 Ton 3 Star">
+            <h3>Haier 1 Ton 3 Star</h3>
+            <p>✅ Affordable price<br>❌ Basic features</p>
             <a href="https://www.amazon.in/gp/product/B0CSK23FH5/ref=ox_sc_act_title_9?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/300" alt="AC No.4">
-            <h3>AC No.4</h3>
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/4.jpg" alt="Voltas 1 Ton 3 Star">
+            <h3>Voltas 1 Ton 3 Star</h3>
+            <p>✅ Reliable brand<br>❌ Slightly noisy</p>
             <a href="https://www.amazon.in/gp/product/B0DSVSMK39/ref=ox_sc_act_title_6?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
         </div>
     </div>
