--- a/index.html
+++ b/index.html
@@ -38,28 +38,12 @@
             margin: 20px 0;
             font-size: 20px;
             font-weight: bold;
-        }
-        .product {
-            background: white;
-            padding: 15px;
-            margin: 10px auto;
-            width: 300px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .product img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        .product a {
-            display: block;
-            margin-top: 10px;
-            padding: 10px;
-            background: #ff9900;
+            cursor: pointer;
+            background-color: #ff9900;
             color: white;
-            text-decoration: none;
+            padding: 10px;
             border-radius: 5px;
-            font-weight: bold;
+            display: inline-block;
         }
         .exclusive-deal {
             position: absolute;
@@ -87,31 +71,7 @@
     </div>
     
     <div class="container">
-        <div class="category">Best AC under 35000</div>
-        <div class="product">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="Carrier 1 Ton 5 Star">
-            <h3>Carrier 1 Ton 5 Star</h3>
-            <p>✅ Energy efficient<br>❌ Slightly expensive</p>
-            <a href="https://www.amazon.in/gp/product/B0DSXQZ4L5/ref=ox_sc_act_title_2?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
-        </div>
-        <div class="product">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/2.jpg" alt="Panasonic 1 Ton 3 Star">
-            <h3>Panasonic 1 Ton 3 Star</h3>
-            <p>✅ Good cooling<br>❌ Moderate power consumption</p>
-            <a href="https://www.amazon.in/gp/product/B0DSWRQRNZ/ref=ox_sc_act_title_8?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
-        </div>
-        <div class="product">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/3.jpg" alt="Haier 1 Ton 3 Star">
-            <h3>Haier 1 Ton 3 Star</h3>
-            <p>✅ Affordable price<br>❌ Basic features</p>
-            <a href="https://www.amazon.in/gp/product/B0CSK23FH5/ref=ox_sc_act_title_9?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
-        </div>
-        <div class="product">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/4.jpg" alt="Voltas 1 Ton 3 Star">
-            <h3>Voltas 1 Ton 3 Star</h3>
-            <p>✅ Reliable brand<br>❌ Slightly noisy</p>
-            <a href="https://www.amazon.in/gp/product/B0DSVSMK39/ref=ox_sc_act_title_6?smid=A3K8GDUW67973J&psc=1" target="_blank">Buy on Amazon</a>
-        </div>
+        <div class="category" onclick="location.href='ac.html'">Best AC under 35000</div>
     </div>
 </body>
 </html>
