--- a/ac.html
+++ b/ac.html
@@ -20,6 +20,22 @@
         .container {
             padding: 20px;
         }
+        .category {
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            background-color: #ff9900;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        .category img {
+            width: 100px;
+            height: auto;
+            margin-right: 10px;
+            vertical-align: middle;
+        }
         .product-container {
             margin-top: 20px;
             display: flex;
@@ -60,6 +76,10 @@
         Best AC under 35000
     </header>
     <div class="container">
+        <a href="ac.html" class="category">
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="AC Category">
+            Best AC under 35000
+        </a>
         <div class="product-container">
             <div class="product">
                 <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="Carrier 1 Ton 5 Star">
@@ -80,6 +100,23 @@
                 <a href="https://www.amazon.in/gp/product/B0DSXQZ4L5/">Buy Now</a>
             </div>
             <div class="product">
+                <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="Carrier 1 Ton 3 Star">
+                <h3>Carrier 1 Ton 3 Star</h3>
+                <div class="details">
+                    <strong>Advantages:</strong>
+                    <ul>
+                        <li>Reliable cooling performance</li>
+                        <li>Energy-efficient</li>
+                    </ul>
+                    <strong>Disadvantages:</strong>
+                    <ul>
+                        <li>Higher power consumption</li>
+                        <li>Limited advanced features</li>
+                    </ul>
+                </div>
+                <a href="https://www.amazon.in/gp/product/B0DSWRQRNZ/">Buy Now</a>
+            </div>
+            <div class="product">
                 <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/2.jpg" alt="Panasonic 1 Ton 3 Star">
                 <h3>Panasonic 1 Ton 3 Star</h3>
                 <div class="details">
@@ -94,7 +131,7 @@
                         <li>Limited advanced features</li>
                     </ul>
                 </div>
-                <a href="https://www.amazon.in/gp/product/B0DSWRQRNZ/">Buy Now</a>
+                <a href="https://www.amazon.in/gp/product/B0DSVSMK39/ref=ox_sc_act_title_6?smid=A3K8GDUW67973J&psc=1">Buy Now</a>
             </div>
             <div class="product">
                 <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/3.jpg" alt="Haier 1 Ton 3 Star">
@@ -128,7 +165,7 @@
                         <li>Basic features</li>
                     </ul>
                 </div>
-                <a href="https://www.amazon.in/gp/product/B0DSVSMK39/">Buy Now</a>
+                <a href="https://www.amazon.in/gp/product/B0D5BN2FDY/ref=ox_sc_act_title_7?smid=A3K8GDUW67973J&psc=1">Buy Now</a>
             </div>
         </div>
     </div>
