--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             border-radius: 5px;
             display: inline-block;
             margin: 10px;
+            text-decoration: none;
         }
         .category img {
             width: 100px;
@@ -81,8 +82,8 @@
             <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="AC Category">
             Best AC under 35000
         </a>
-        <a href="deals.html" class="category">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/deals.jpg" alt="Latest Deals">
+        <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60" class="category">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/crazy_deal_logo__95840.webp" alt="Latest Deals">
             Latest Deals and Offers
         </a>
     </div>
