--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best AC under 35000</title>
+    <title>My Suggestions for ACs</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,15 +75,15 @@
 </head>
 <body>
     <header>
-        Best AC under 35000
+        My Suggestions for ACs
     </header>
     <div class="container">
         <a href="ac.html" class="category">
             <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="AC Category">
-            Best AC under 35000
+            My Suggestions for ACs
         </a>
         <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60" class="category">
-            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/crazy_deal_logo__95840.webp" alt="Latest Deals">
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/crazy_deal_logo__95840%20(1).png" alt="Latest Deals">
             Latest Deals and Offers
         </a>
     </div>
