--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             font-size: 24px;
             color: white;
         }
+        nav {
+            background: #333;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
         .container {
             padding: 20px;
         }
@@ -77,6 +87,11 @@
     <header>
         My Suggestions for ACs
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="ac.html">Air Conditioners</a>
+        <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60">Latest Deals</a>
+    </nav>
     <div class="container">
         <a href="ac.html" class="category">
             <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="AC Category">
@@ -85,6 +100,10 @@
         <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60" class="category">
             <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/crazy_deal_logo__95840%20(1).png" alt="Latest Deals">
             Latest Deals and Offers
+        </a>
+        <a href="birthday-gifts.html" class="category">
+            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/birthday_gifts_kids.jpg" alt="Birthday Gifts">
+            Birthday Gifts for Kids
         </a>
     </div>
 </body>
