--- a/birthday-gifts.html.html
+++ b/birthday-gifts.html.html
@@ -111,22 +111,49 @@
         <h2>Birthday Gift Listings</h2>
         <div class="product-container">
             <div class="product">
-                <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/gift1.jpg" alt="Gift 1">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g1.png?raw=true" alt="Gift 1">
                 <h3>Gift Item 1</h3>
-                <p>Perfect for birthdays and special occasions.</p>
-                <a href="https://www.amazon.in/dp/B09G6MFZB3">Buy Now</a>
+                <a href="#">Buy Now</a>
             </div>
             <div class="product">
-                <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/gift2.jpg" alt="Gift 2">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g2.png?raw=true" alt="Gift 2">
                 <h3>Gift Item 2</h3>
-                <p>A unique and thoughtful present for loved ones.</p>
-                <a href="https://www.amazon.in/dp/B08XYZ1234">Buy Now</a>
+                <a href="#">Buy Now</a>
             </div>
             <div class="product">
-                <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/gift3.jpg" alt="Gift 3">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g3.png?raw=true" alt="Gift 3">
                 <h3>Gift Item 3</h3>
-                <p>Great for kids and adults alike.</p>
-                <a href="https://www.amazon.in/dp/B07ABC5678">Buy Now</a>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g4.png?raw=true" alt="Gift 4">
+                <h3>Gift Item 4</h3>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g5.png?raw=true" alt="Gift 5">
+                <h3>Gift Item 5</h3>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g6.png?raw=true" alt="Gift 6">
+                <h3>Gift Item 6</h3>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g8.png?raw=true" alt="Gift 7">
+                <h3>Gift Item 7</h3>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g9.png?raw=true" alt="Gift 8">
+                <h3>Gift Item 8</h3>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="product">
+                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g10.png?raw=true" alt="Gift 9">
+                <h3>Gift Item 9</h3>
+                <a href="#">Buy Now</a>
             </div>
         </div>
     </div>
