--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             padding: 15px;
             font-size: 24px;
             color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        header img {
+            width: 100px;
+            height: auto;
+            margin-right: 15px;
+        }
+        .logo-text {
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            color: white;
         }
         nav {
             background: #333;
@@ -52,7 +66,8 @@
 </head>
 <body>
     <header>
-        My Suggestions for ACs
+        <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/Logo.png?raw=true" alt="Website Logo">
+        <span class="logo-text">Deal Hive</span>
     </header>
     <nav>
         <a href="index.html">Home</a>
