--- a/birthday-gifts.html.html
+++ b/birthday-gifts.html.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Suggestions for ACs</title>
+    <title>Birthday Gifts for Kids</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,145 +17,97 @@
             font-size: 24px;
             color: white;
         }
-        nav {
-            background: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
         .container {
             padding: 20px;
         }
-        .category {
-            font-size: 24px;
-            font-weight: bold;
-            cursor: pointer;
-            background-color: #ff9900;
-            color: white;
-            padding: 15px;
-            border-radius: 5px;
+        .gift-item {
             display: inline-block;
-            margin: 10px;
-            text-decoration: none;
-        }
-        .category img {
-            width: 100px;
-            height: auto;
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-        .product-container {
-            margin-top: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .product {
-            background: white;
+            width: 250px;
+            margin: 15px;
             padding: 15px;
-            margin: 10px;
-            width: 300px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
         }
-        .product img {
+        .gift-item img {
             width: 100%;
+            height: auto;
             border-radius: 5px;
         }
-        .product a {
+        .buy-link {
             display: block;
             margin-top: 10px;
             padding: 10px;
-            background: #ff9900;
+            background-color: #ff9900;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
         }
-        .details {
-            text-align: left;
-            margin-top: 10px;
+        .buy-link:hover {
+            background-color: #e68a00;
         }
     </style>
 </head>
 <body>
-    <header>
-        My Suggestions for ACs
-    </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="ac.html">Air Conditioners</a>
-        <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60">Latest Deals</a>
-    </nav>
+    <header>Birthday Gifts for Kids</header>
     <div class="container">
-        <a href="ac.html" class="category">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/Jeremy-s-blog-on-products/main/1.jpg" alt="AC Category">
-            My Suggestions for ACs
-        </a>
-        <a href="https://www.amazon.in/gp/goldbox?promotionsSearchLastSeenAsin=B0C3LHV43S&promotionsSearchStartIndex=0&promotionsSearchPageSize=60" class="category">
-            <img src="https://raw.githubusercontent.com/Jeremy001-affiliate/DealHive/main/crazy_deal_logo__95840%20(1).png" alt="Latest Deals">
-            Latest Deals and Offers
-        </a>
-        <a href="birthday-gifts.html" class="category">
-            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/birthday%20text.ong.jpg?raw=true" alt="Birthday Gifts">
-            Birthday Gifts for Kids
-        </a>
-    </div>
-    
-    <div class="container">
-        <h2>Birthday Gift Listings</h2>
-        <div class="product-container">
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g1.png?raw=true" alt="Gift 1">
-                <h3>Gift Item 1</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g2.png?raw=true" alt="Gift 2">
-                <h3>Gift Item 2</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g3.png?raw=true" alt="Gift 3">
-                <h3>Gift Item 3</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g4.png?raw=true" alt="Gift 4">
-                <h3>Gift Item 4</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g5.png?raw=true" alt="Gift 5">
-                <h3>Gift Item 5</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g6.png?raw=true" alt="Gift 6">
-                <h3>Gift Item 6</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g8.png?raw=true" alt="Gift 7">
-                <h3>Gift Item 7</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g9.png?raw=true" alt="Gift 8">
-                <h3>Gift Item 8</h3>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="product">
-                <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g10.png?raw=true" alt="Gift 9">
-                <h3>Gift Item 9</h3>
-                <a href="#">Buy Now</a>
-            </div>
+        
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71Lmg1ww2YL._AC_UL480_FMwebp_QL65_.jpg" alt="Crystal Ball Night Lamp">
+            <p>Crystal Ball Night Lamp</p>
+            <a href="https://www.amazon.in/One94store-Crystal-Ball-Night-Lamp/dp/B0CYTCD6TH" class="buy-link" target="_blank">Buy Now</a>
         </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/81WvliXjcyL._AC_UL480_FMwebp_QL65_.jpg" alt="Handmade Journal Notebook">
+            <p>Handmade Journal Notebook</p>
+            <a href="https://www.amazon.in/ALCRAFT-Shadows-Journal-Handmade-Notebook/dp/B0BBZN9VHR" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/61GGXYBDd5L._AC_UL480_FMwebp_QL65_.jpg" alt="Moon Crystal Lamp">
+            <p>Moon Crystal Lamp</p>
+            <a href="https://www.amazon.in/Desidiya-Crystal-Night-Woodern-Decorations/dp/B0D2P9JK11" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71Aq7cfGiML._AC_UL480_FMwebp_QL65_.jpg" alt="Pearl Night Light">
+            <p>Pearl Night Light</p>
+            <a href="https://www.amazon.in/MeeTo-Nightlight-Clamshell-Decoration-Christmas/dp/B0C58JN1FW" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71v-GpU3mvL._AC_UL480_FMwebp_QL65_.jpg" alt="Heart Crystal Figurine">
+            <p>Heart Crystal Figurine</p>
+            <a href="https://www.amazon.in/KESI-ORNAMENTS-Figurine-Birthday-Christmas/dp/B0DS567NQY" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71xDqOjH8VL._AC_UL480_FMwebp_QL65_.jpg" alt="Couple Mugs">
+            <p>Couple Mugs</p>
+            <a href="https://www.amazon.in/CPENSUS-Anniversary-Engagement-MRS-Mugs/dp/B0BY8F3L2X" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71eMTF-BT4L._AC_UL480_FMwebp_QL65_.jpg" alt="Romantic Projector Lamp">
+            <p>Romantic Projector Lamp</p>
+            <a href="https://www.amazon.in/One94Store-acrylic-Romantic-Projector-Projection/dp/B0DGGYS38S" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/71qOU9VcRzL._AC_UL480_FMwebp_QL65_.jpg" alt="Premium Signature Pen">
+            <p>Premium Signature Pen</p>
+            <a href="https://www.amazon.in/Cello-Signature-Premium-Stylish-Corporate/dp/B0CDCCNCJQ" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
+        <div class="gift-item">
+            <img src="https://m.media-amazon.com/images/I/61aM7EmFXpL._AC_UL480_FMwebp_QL65_.jpg" alt="Aesthetic Scrapbook Kit">
+            <p>Aesthetic Scrapbook Kit</p>
+            <a href="https://www.amazon.in/VIBE-VISTA-Aesthetic-Scrapbook-Background/dp/B0D79GQP4G" class="buy-link" target="_blank">Buy Now</a>
+        </div>
+
     </div>
 </body>
 </html>
