--- a/birthday-gifts.html.html
+++ b/birthday-gifts.html.html
@@ -2,112 +2,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Gifts for Kids</title>
+    <title>Birthday Gift Ideas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
             text-align: center;
-        }
-        header {
-            background-color: #ff9900;
-            padding: 15px;
-            font-size: 24px;
-            color: white;
         }
         .container {
-            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
         }
-        .gift-item {
-            display: inline-block;
-            width: 250px;
-            margin: 15px;
+        .gift {
+            width: 300px;
             padding: 15px;
-            background-color: white;
+            border: 1px solid #ddd;
             border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
+            background-color: #f9f9f9;
         }
-        .gift-item img {
+        .gift img {
             width: 100%;
             height: auto;
-            border-radius: 5px;
+            border-radius: 8px;
         }
-        .buy-link {
+        .gift a {
             display: block;
             margin-top: 10px;
-            padding: 10px;
-            background-color: #ff9900;
-            color: white;
             text-decoration: none;
+            color: white;
+            background-color: #007BFF;
+            padding: 10px;
             border-radius: 5px;
-            font-weight: bold;
         }
-        .buy-link:hover {
-            background-color: #e68a00;
+        .gift a:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <header>Birthday Gifts for Kids</header>
+
+    <h1>Birthday Gift Ideas</h1>
     <div class="container">
         
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71Lmg1ww2YL._AC_UL480_FMwebp_QL65_.jpg" alt="Crystal Ball Night Lamp">
-            <p>Crystal Ball Night Lamp</p>
-            <a href="https://www.amazon.in/One94store-Crystal-Ball-Night-Lamp/dp/B0CYTCD6TH" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g1.png" alt="Crystal Ball Night Lamp">
+            <a href="https://www.amazon.in/One94store-Crystal-Ball-Night-Lamp/dp/B0CYTCD6TH" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/81WvliXjcyL._AC_UL480_FMwebp_QL65_.jpg" alt="Handmade Journal Notebook">
-            <p>Handmade Journal Notebook</p>
-            <a href="https://www.amazon.in/ALCRAFT-Shadows-Journal-Handmade-Notebook/dp/B0BBZN9VHR" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/2.jpg" alt="Handmade Journal">
+            <a href="https://www.amazon.in/ALCRAFT-Shadows-Journal-Handmade-Notebook/dp/B0BBZN9VHR" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/61GGXYBDd5L._AC_UL480_FMwebp_QL65_.jpg" alt="Moon Crystal Lamp">
-            <p>Moon Crystal Lamp</p>
-            <a href="https://www.amazon.in/Desidiya-Crystal-Night-Woodern-Decorations/dp/B0D2P9JK11" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g3.png" alt="Moon Lamp">
+            <a href="https://www.amazon.in/Desidiya-Crystal-Night-Woodern-Decorations/dp/B0D2P9JK11" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71Aq7cfGiML._AC_UL480_FMwebp_QL65_.jpg" alt="Pearl Night Light">
-            <p>Pearl Night Light</p>
-            <a href="https://www.amazon.in/MeeTo-Nightlight-Clamshell-Decoration-Christmas/dp/B0C58JN1FW" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g4.png" alt="Pearl Nightlight">
+            <a href="https://www.amazon.in/MeeTo-Nightlight-Clamshell-Decoration-Christmas/dp/B0C58JN1FW" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71v-GpU3mvL._AC_UL480_FMwebp_QL65_.jpg" alt="Heart Crystal Figurine">
-            <p>Heart Crystal Figurine</p>
-            <a href="https://www.amazon.in/KESI-ORNAMENTS-Figurine-Birthday-Christmas/dp/B0DS567NQY" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g5.png" alt="Heart Figurine">
+            <a href="https://www.amazon.in/KESI-ORNAMENTS-Figurine-Birthday-Christmas/dp/B0DS567NQY" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71xDqOjH8VL._AC_UL480_FMwebp_QL65_.jpg" alt="Couple Mugs">
-            <p>Couple Mugs</p>
-            <a href="https://www.amazon.in/CPENSUS-Anniversary-Engagement-MRS-Mugs/dp/B0BY8F3L2X" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g6.png" alt="Couple Mugs">
+            <a href="https://www.amazon.in/CPENSUS-Anniversary-Engagement-MRS-Mugs/dp/B0BY8F3L2X" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71eMTF-BT4L._AC_UL480_FMwebp_QL65_.jpg" alt="Romantic Projector Lamp">
-            <p>Romantic Projector Lamp</p>
-            <a href="https://www.amazon.in/One94Store-acrylic-Romantic-Projector-Projection/dp/B0DGGYS38S" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g8.png" alt="Romantic Projector">
+            <a href="https://www.amazon.in/One94Store-acrylic-Romantic-Projector-Projection/dp/B0DGGYS38S" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/71qOU9VcRzL._AC_UL480_FMwebp_QL65_.jpg" alt="Premium Signature Pen">
-            <p>Premium Signature Pen</p>
-            <a href="https://www.amazon.in/Cello-Signature-Premium-Stylish-Corporate/dp/B0CDCCNCJQ" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g9.png" alt="Premium Pen">
+            <a href="https://www.amazon.in/Cello-Signature-Premium-Stylish-Corporate/dp/B0CDCCNCJQ" target="_blank">Buy Now</a>
         </div>
 
-        <div class="gift-item">
-            <img src="https://m.media-amazon.com/images/I/61aM7EmFXpL._AC_UL480_FMwebp_QL65_.jpg" alt="Aesthetic Scrapbook Kit">
-            <p>Aesthetic Scrapbook Kit</p>
-            <a href="https://www.amazon.in/VIBE-VISTA-Aesthetic-Scrapbook-Background/dp/B0D79GQP4G" class="buy-link" target="_blank">Buy Now</a>
+        <div class="gift">
+            <img src="https://github.com/Jeremy001-affiliate/DealHive/blob/main/g10.png" alt="Aesthetic Scrapbook">
+            <a href="https://www.amazon.in/VIBE-VISTA-Aesthetic-Scrapbook-Background/dp/B0D79GQP4G" target="_blank">Buy Now</a>
         </div>
 
     </div>
+
 </body>
 </html>
